# dgn_move

./: pyproject.toml
_archive_scripts/: data_download.py  pyproject.toml  train_polar_dgn.py
dgn4cfd/: __init__.py  datasets.py
dgn4cfd/nn/: __init__.py  losses.py
dgn4cfd/nn/diffusion/: __init__.py  polar_diffusion_process.py
dgn4cfd/nn/diffusion/models/: __init__.py  polar_dgn.py
dgn4cfd/process/: __init__.py  plot_training.py  tensorboard_log.py
